# realHTML4NaturalAwsLambda

./: .gitignore  .gitmodules  CMakeLists.txt
apps/bootstrapper/src/: main.cpp
apps/test/: main.cpp
natural/opt/Natural/ERR/: N01L0000.MSG  N01L2000.MSG  N01L3000.MSG  N01L3300.MSG  N01L4000.MSG  N01L6000.MSG  N01L7000.MSG  N01L8000.MSG  N01L9000.MSG  N59L0000.MSG  N59L2000.MSG  N59L3000.MSG  N59L3300.MSG  N59L4000.MSG  N59L6000.MSG  N59L7000.MSG  N59L8000.MSG  N59L9000.MSG  NATTEXT.MSG
natural/opt/Natural/etc/: NATCONF.CFG  NATCONV.INI  NATURAL.INI  SAGtermcap
natural/opt/Natural/fnat/: LIBDIR.SAG
natural/opt/Natural/fnat/SYSAPI/: FILEDIR.SAG
natural/opt/Natural/fnat/SYSAPI/GP/: API-CXML.NGN  API-DATA.NGN  API-GEN.NGP  API-LANG.NGN  API-PDA1.NGA  API-PDA2.NGA  API-RAPI.NGN  API-WXML.NGN
natural/opt/Natural/fnat/SYSBPM/: FILEDIR.SAG
natural/opt/Natural/fnat/SYSBPM/GP/: CRTPRL.NGP
natural/opt/Natural/fnat/SYSDDM/: FILEDIR.SAG
natural/opt/Natural/fnat/SYSDDM/GP/: DDMXPRD.NGP  OSQSTART.NGP  OSQSTOP.NGN  PRDSQL01.NGN  PRDSQL02.NGN  PRDSQL03.NGN  PRDSQL04.NGN  PRDSQL06.NGN  PRDSQL07.NGN
natural/opt/Natural/fnat/SYSDICAM/ERR/: N01APMSL.MSG
natural/opt/Natural/fnat/SYSEDM/: FILEDIR.SAG
natural/opt/Natural/fnat/SYSEDM/GP/: ACTALL.NGN  ACTALL1.NGN  ADDEVENT.NGN  BIT.NGN  BITTEST.NGN  BYTE.NGN  CALLDIS3.NGN  CALLDISC.NGN  CALLINFO.NGN  CALLMON3.NGN  CALLMONI.NGN  CALLNOM.NGN  CALLNOPM.NGN  CALLNOPN.NGN  CALLNOPS.NGN  CHKPGM.NGN  CONDIS23.NGN  CONDIS32.NGN  CONMON23.NGN  CONMON32.NGN  DI3TRACE.NGN  DISADAOS.NGN  DISCOLL.NGN  DISCOVER.NGP  DISDATAL.NGL  DISNBPOS.NGN  DISNOM.NGN  DISNOP.NGN  DISNSC.NGN  DISTRACE.NGN  FILE-OS.NGN  FILENAME.NGN  GETEMAP.NGN  HADATEST.NGM  HCOMMAND.NGM  HELPEMAP.NGH  HINTERN.NGM  HINTEROS.NGM  HOPTRDC.NGM  HOPTTEST.NGM  (+62 more)
natural/opt/Natural/fnat/SYSEDM/SRC/: PROFILE.NST  REVISION.NST
natural/opt/Natural/fnat/SYSERR/: FILEDIR.SAG
natural/opt/Natural/fnat/SYSERR/GP/: ERRCHAR.NGP  ERRCSETA.NGN  ERRGDA.NGG  ERRMENU.NGP  ERRUPPER.NGP  HELP1.NGH  HELP2.NGH  HELP3.NGH  HELP4.NGP  LASTPROG.NGP  MADDLONG.NGM  MADDSHOR.NGM  MDISLONG.NGM  MDISSHOR.NGM  MENU.NGP  MERRCHAR.NGM  MFIND.NGM  MHELP1.NGM  MHELP2.NGM  MHELP5.NGM  MLAYOUT.NGM  MMENU.NGM  MSELNAT.NGM  MSELNATA.NGM  MSELUSR.NGM  MSELUSRA.NGM  MTRASHOR.NGM  MUPDLONG.NGM  MUPDSHOR.NGM  NAT23001.NGN  P-CERR-N.NGN  P-CLIB-N.NGN  P-CMFL-S.NGS  P-CMME-N.NGN  P-DERR-N.NGN  P-GFP--N.NGN  P-GPTH-L.NGL  P-UCFN-N.NGN  PADD-NL.NGP  PADD-NS.NGP  (+44 more)
natural/opt/Natural/fnat/SYSERR/SRC/: ERRCSETA.NSN  LASTPROG.NSP  USEREXIT.NSP
natural/opt/Natural/fnat/SYSEXBAT/: FILEDIR.SAG
natural/opt/Natural/fnat/SYSEXBAT/GP/: EJECTOFF.NGP  EJECTON.NGP  ERROR1.NGP  ERROR2.NGP  ERROR3.NGP  EXBA-GDA.NGG  EXBADISP.NGS  EXBAHE0.NGH  EXBAHE1.NGH  EXBAHE2.NGH  EXBAMAP1.NGM  EXBAMAP2.NGM  EXBASUBM.NGP  GETENT.NGN  GETOBJ.NGN  HIDESHOW.NGP  KEYDELIM.NGP  LSTARTEX.NGA  MENU---C.NGP  MENU.NGP  MESSAGE.NGP  NOERASE.NGP  PARAM.NGP  PFKEY.NGP  RECCONT.NGP  RECSUPP.NGP  REINPUT.NGP  SPLIT2LI.NGN  STACK.NGP  TAB-INIT.NGS  WINDOW.NGP
natural/opt/Natural/fnat/SYSEXBAT/SRC/: A-README.NST  EJECTOFF.NSP  EJECTON.NSP  ERROR1.NSP  ERROR2.NSP  ERROR3.NSP  GETENT.NSN  GETOBJ.NSN  HIDESHOW.NSP  KEYDELIM.NSP  LSTARTEX.NSA  MENU.NSP  MESSAGE.NSP  NOERASE.NSP  PARAM.NSP  PFKEY.NSP  RECCONT.NSP  RECSUPP.NSP  REINPUT.NSP  STACK.NSP  WINDOW.NSP
natural/opt/Natural/fnat/SYSEXDDM/: FILEDIR.SAG
natural/opt/Natural/fnat/SYSEXDDM/GP/: EMPLOYE0.NGD  EMPLOYE1.NGD  EMPLOYEE.NGD  SAG-TO10.NGD  SAG-TO11.NGD  SAG-TO12.NGD  SAG-TO13.NGD  SAG-TOU2.NGD  SAG-TOU3.NGD  SAG-TOU4.NGD  SAG-TOU5.NGD  SAG-TOU6.NGD  SAG-TOU7.NGD  SAG-TOU8.NGD  SAG-TOU9.NGD  SAG-TOUR.NGD  VEHICLES.NGD
natural/opt/Natural/fnat/SYSEXDDM/SRC/: EMPLOYE0.NSD  EMPLOYE1.NSD  EMPLOYEE.NSD  SAG-TO10.NSD  SAG-TO11.NSD  SAG-TO12.NSD  SAG-TO13.NSD  SAG-TOU2.NSD  SAG-TOU3.NSD  SAG-TOU4.NSD  SAG-TOU5.NSD  SAG-TOU6.NSD  SAG-TOU7.NSD  SAG-TOU8.NSD  SAG-TOU9.NSD  SAG-TOUR.NSD  VEHICLES.NSD
natural/opt/Natural/fnat/SYSEXNDV/: FILEDIR.SAG
natural/opt/Natural/fnat/SYSEXNDV/GP/: NDVS001N.NGN  NDVS002N.NGN  (+7 more)
natural/opt/Natural/fnat/SYSEXNJX/: FILEDIR.SAG
natural/opt/Natural/fnat/SYSEXNNI/: FILEDIR.SAG
natural/opt/Natural/fnat/SYSEXPG/: FILEDIR.SAG
natural/opt/Natural/fnat/SYSEXSYN/: FILEDIR.SAG
natural/opt/Natural/fnat/SYSEXT/: FILEDIR.SAG
natural/opt/Natural/fnat/SYSEXTDB/: FILEDIR.SAG
natural/opt/Natural/fnat/SYSEXUEX/: FILEDIR.SAG
natural/opt/Natural/fnat/SYSEXV/: FILEDIR.SAG
natural/opt/Natural/fnat/SYSIDL/: FILEDIR.SAG
natural/opt/Natural/fnat/SYSINPL/: FILEDIR.SAG
natural/opt/Natural/fnat/SYSINPLO/: FILEDIR.SAG
natural/opt/Natural/fnat/SYSLIB/: FILEDIR.SAG
natural/opt/Natural/fnat/SYSLIBS/: FILEDIR.SAG
natural/opt/Natural/fnat/SYSMAIN/: FILEDIR.SAG
natural/opt/Natural/fnat/SYSMAP/: FILEDIR.SAG
natural/opt/Natural/fnat/SYSNCP/: FILEDIR.SAG
natural/opt/Natural/fnat/SYSNDVCO/: FILEDIR.SAG
natural/opt/Natural/fnat/SYSNPE/: FILEDIR.SAG
natural/opt/Natural/fnat/SYSNPEH1/: FILEDIR.SAG
natural/opt/Natural/fnat/SYSNPEH2/: FILEDIR.SAG
natural/opt/Natural/fnat/SYSNPR/: FILEDIR.SAG
natural/opt/Natural/fnat/SYSOBJH/: FILEDIR.SAG
natural/opt/Natural/fnat/SYSPCI/: FILEDIR.SAG
natural/opt/Natural/fnat/SYSPLWEB/: FILEDIR.SAG
natural/opt/Natural/fnat/SYSPRFLR/: FILEDIR.SAG
natural/opt/Natural/fnat/SYSRPC/: FILEDIR.SAG
natural/opt/Natural/fnat/SYSTEM/: FILEDIR.SAG
natural/opt/Natural/fnat/SYSUTIL/: FILEDIR.SAG
natural/opt/Natural/fnat/SYSWEB3/: FILEDIR.SAG
natural/opt/Natural/fnat/SYSXTK/: FILEDIR.SAG
natural/opt/Natural/fuser/TOM/: FILEDIR.SAG
natural/opt/Natural/lib/: libicui18n.so.58  libicuio.so.58  libicutu.so.58  libicuuc.so.58  libxalanMsg.so.111
natural/opt/Natural/prof/: DEFAULT.PRF  NATPARM.SAG  NDVPARM.SAG  NDVSERVER.PRU
natural/opt/Natural/tmp/: IDDCIAHI.LST  NATPARM.LST  NDVPARM.LST
natural/opt/Natural/txt/: N01CHC00.MSG  N01HLP00.MSG  N01TXT00.MSG  NATTERMCAP.HLP
natural/opt/common/Licenses/: saglicense.txt
natural/opt/common/conf/: nat91.xml  ndv91.xml
natural/opt/common/saglic/: check.sh  info.sh  readme.txt  saglicutil
(+6784 files in other folders)
